# pseudo_tetris

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build_env.yaml  build_master.yaml  build_pr.yaml
bl/: CMakeLists.txt
bl/blocks/: CMakeLists.txt
bl/blocks/block_factory/: CMakeLists.txt
bl/blocks/block_factory/inc/: block_factory.hpp
bl/blocks/block_factory/src/: block_factory.cpp
bl/blocks/concrete_blocks/: CMakeLists.txt
bl/blocks/concrete_blocks/src/: lshape.cpp  square.cpp
bl/blocks/inc/: block.hpp  block_shapes.hpp  diagonal.hpp  lshape.hpp  square.hpp  tshape.hpp
bl/blocks/src/: block.cpp  diagonal.cpp  lshape.cpp  square.cpp  tshape.cpp
bl/board/: CMakeLists.txt
bl/board/inc/: board.hpp
bl/board/src/: board.cpp
bl/drawable/: CMakeLists.txt
bl/drawable/inc/: drawable.hpp
bl/drawable/src/: drawable.cpp
gui/: CMakeLists.txt
gui/color/: CMakeLists.txt
gui/color/inc/: color.hpp
gui/drawable/: CMakeLists.txt
gui/drawable/inc/: drawable.hpp
gui/drawable/src/: drawable.cpp
gui/drawing_engine/: CMakeLists.txt
gui/drawing_engine/cli_color/: CMakeLists.txt
gui/drawing_engine/cli_color/inc/: cli_color.hpp
gui/drawing_engine/cli_color/src/: cli_color.cpp
gui/drawing_engine/inc/: cli_color.hpp  drawing_engine.hpp
gui/drawing_engine/src/: cli_color.cpp  drawing_engine.cpp
gui/frame_buffer/: CMakeLists.txt
gui/frame_buffer/inc/: frame_buffer.hpp
gui/frame_buffer/src/: frame_buffer.cpp
main/: main.cpp
